Fix: Critter card text background for readability

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -257,9 +257,12 @@ a {
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 .critter-card h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  background-color: rgba(255, 255, 255, 0.6);
   position: absolute;
   z-index: 1;
+  width: 100%;
+  text-align: center;
 }
 @media screen and (max-width: 1000px) {
   .critter-card {
